Paginas de titulos e titulo por id

--- a/front/src/assets/styles/colors.scss
+++ b/front/src/assets/styles/colors.scss
@@ -1,3 +1,9 @@
 $green-1: #2DFFAE;
+$green-2: rgb(4, 148, 93);
+
 $grey-1: #CCCCCC;
 $grey-2: #333333;
+$grey-3: #666666;
+$grey-4: #EFEFEF;
+
+$orange-1: rgb(243, 158, 1);
