--- a/front/src/assets/styles/variables.scss
+++ b/front/src/assets/styles/variables.scss
@@ -6,3 +6,9 @@ $secondaryColor: $grey-1;
 $secondaryColorContrast: black;
 $tertiaryColor: black;
 $tertiaryColorContrast: white;
+
+
+$viewport-xs-breakpoint: 576px;
+$viewport-sm-breakpoint: 768px;
+$viewport-lg-breakpoint: 992px;
+$viewport-xl-breakpoint: 1200px;
